# brave-core

./: .gitignore  .travis.yml  BUILD.gn  DEPS  brave_paks.gni  package-lock.json  package.json  tsconfig.json
.github/: CODEOWNERS
android/: brave_java_resources.gni  brave_java_sources.gni
app/: bookmarks_strings.grdp  brave_command_ids.h  brave_generated_resources.grd  brave_main_delegate.cc  brave_main_delegate_browsertest.cc  brave_strings.grd  brave_strings_override.grd  generated_resources.grd  settings_strings.grdp
browser/: BUILD.gn  brave_browser_main_parts.cc  brave_browser_process_impl.cc  brave_content_browser_client.cc  brave_content_browser_client.h  brave_content_browser_client_unittest.cc  brave_features_browsertest.cc  brave_profile_prefs.cc  brave_profile_prefs_browsertest.cc  browser_context_keyed_service_factories.cc
browser/extensions/api/playlist/: BUILD.gn  brave_playlists_api.cc  brave_playlists_api.h  brave_playlists_apitest.cc  brave_playlists_event_router.cc  brave_playlists_event_router.h  playlist_api.cc  playlist_api.h  playlist_apitest.cc  playlist_event_router.cc  playlist_event_router.h  playlist_event_router_factory.cc  playlist_event_router_factory.h
browser/playlist/: BUILD.gn  desktop_playlist_player.cc  desktop_playlist_player.h  playlist_browsertest.cc  playlist_service_factory.cc  playlist_service_factory.h
browser/playlist/test/: BUILD.gn  playlist_browsertest.cc
browser/playlists/: BUILD.gn  desktop_playlists_player.cc  desktop_playlists_player.h  playlists_browsertest.cc  playlists_service.cc  playlists_service.h  playlists_service_factory.cc  playlists_service_factory.h
common/: BUILD.gn  network_constants.cc  network_constants.h  pref_names.cc  pref_names.h  url_constants.cc  url_constants.h  webui_url_constants.cc  webui_url_constants.h
components/: page_info_strings.grdp  security_interstitials_strings.grdp  ssl_errors_strings.grdp
components/binance_widget/browser/: BUILD.gn  binance_crypto.cc  binance_crypto.h  binance_crypto_unittest.cc  binance_json_parser.cc  binance_json_parser.h  binance_json_parser_unittest.cc  binance_widget_controller.cc  binance_widget_controller.h  binance_widget_controller_observer.h  binance_widget_service.cc  binance_widget_service.h  binance_widget_service_browsertest.cc
components/brave_sync/aws/: BUILD.gn
components/ipfs_onboarding_ui/: BUILD.gn  ipfs_onboarding.html  ipfs_onboarding.tsx
components/payments/content/: bat_payment_app.cc  bat_payment_app.h  bat_payment_app_factory.cc  bat_payment_app_factory.h  brave_payment_app_service.cc  brave_payment_app_service.h  brave_payment_sources.gni
components/playlist/browser/: BUILD.gn  features.cc  features.h  playlist_constants.cc  playlist_constants.h  playlist_data_source.cc  playlist_data_source.h  playlist_download_request_manager.cc  playlist_download_request_manager.h  playlist_media_file_controller.cc  playlist_media_file_controller.h  playlist_media_file_download_manager.cc  playlist_media_file_download_manager.h  playlist_media_file_downloader.cc  playlist_media_file_downloader.h  playlist_player.h  playlist_service.cc  playlist_service.h  playlist_service_helper.cc  playlist_service_helper.h  playlist_service_observer.h  playlist_thumbnail_downloader.cc  playlist_thumbnail_downloader.h  playlist_types.cc  playlist_types.h  playlist_youtubedown_component_installer.cc  playlist_youtubedown_component_installer.h  playlist_youtubedown_component_manager.cc  playlist_youtubedown_component_manager.h
components/playlist/browser/buildflags/: BUILD.gn  buildflags.gni
components/playlists/browser/: BUILD.gn  playlists_constants.cc  playlists_constants.h  playlists_controller.cc  playlists_controller.h  playlists_controller_observer.h  playlists_data_source.cc  playlists_data_source.h  playlists_media_file_controller.cc  playlists_media_file_controller.h  playlists_player.h  playlists_service.cc  playlists_service.h  playlists_service_observer.h  playlists_types.h
components/playlists/browser/buildflags/: buildflags.gni
patches/: base-BUILD.gn.patch  build-config-BUILDCONFIG.gn.patch  build-config-android-config.gni.patch  build-config-android-internal_rules.gni.patch  build-config-android-rules.gni.patch  build-config-compiler-BUILD.gn.patch  chrome-VERSION.patch  chrome-android-BUILD.gn.patch  chrome-android-chrome_java_resources.gni.patch  chrome-android-chrome_java_sources.gni.patch  chrome-android-expectations-lint-suppressions.xml.patch  chrome-android-features-tab_ui-BUILD.gn.patch  chrome-android-java-AndroidManifest.xml.patch  chrome-android-java-res-menu-website_preferences_menu.xml.patch  chrome-android-java-src-org-chromium-chrome-browser-ChromeTabbedActivity.java.patch  chrome-android-java-src-org-chromium-chrome-browser-app-ChromeActivity.java.patch  chrome-android-java-src-org-chromium-chrome-browser-flags-FeatureUtilities.java.patch  chrome-android-java-src-org-chromium-chrome-browser-preferences-website-SiteSettingsPreferences.java.patch  chrome-android-java-src-org-chromium-chrome-browser-settings-privacy-ClearBrowsingDataFragment.java.patch  chrome-android-java-src-org-chromium-chrome-browser-signin-SigninManager.java.patch  chrome-android-java-src-org-chromium-chrome-browser-toolbar-ToolbarManager.java.patch  chrome-android-java-src-org-chromium-chrome-browser-toolbar-bottom-BottomToolbarCoordinator.java.patch  chrome-android-java-src-org-chromium-chrome-browser-toolbar-top-ToolbarPhone.java.patch  chrome-browser-BUILD.gn.patch  chrome-browser-about_flags.cc.patch  chrome-browser-chrome_content_browser_client.h.patch  chrome-browser-extensions-BUILD.gn.patch  chrome-browser-extensions-api-developer_private-developer_private_api.cc.patch  chrome-browser-extensions-api-developer_private-extension_info_generator.cc.patch  chrome-browser-extensions-api-developer_private-extension_info_generator.h.patch  chrome-browser-flags-android-chrome_feature_list.cc.patch  chrome-browser-importer-profile_writer.h.patch  chrome-browser-net-errorpage_browsertest.cc.patch  chrome-browser-prefs-browser_prefs.cc.patch  (+72 more)
(+639 files in other folders)
