source_set("playlist") {
  # Set due to //chrome/browser and //chrome/browser/ui circular dependencies.
  check_includes = false

  sources = [
    "playlist_service_factory.cc",
    "playlist_service_factory.h",
  ]

  deps = [
    "//base",
    "//brave/components/playlist/browser",
    "//chrome/common",
    "//components/keyed_service/content",
    "//content/public/browser",
  ]

  if (!is_android) {
    sources += [
      "desktop_playlist_player.cc",
      "desktop_playlist_player.h",
    ]

    deps += [ "//net" ]
  }
}
