import("//extensions/buildflags/buildflags.gni")

source_set("playlists") {
  sources = [
    "playlists_service.cc",
    "playlists_service.h",
    "playlists_service_factory.cc",
    "playlists_service_factory.h",
  ]

  deps = [
    "//base",
    "//brave/components/playlists/browser",
    "//components/keyed_service/content",
    "//components/keyed_service/core",
    "//content/public/browser",
    "//extensions/buildflags",
  ]

  if (enable_extensions) {
    deps += [
      "//brave/common/extensions/api",
      "//extensions/browser",
    ]
  }

  if (!is_android) {
    sources += [
      "desktop_playlists_player.cc",
      "desktop_playlists_player.h",
    ]
  }
}
