source_set("playlists") {
  sources = [
    "playlists_service_factory.cc",
    "playlists_service_factory.h",
  ]

  deps = [
    "//base",
    "//brave/components/playlists/browser",
    "//components/keyed_service/content",
    "//content/public/browser",
  ]

  if (!is_android) {
    sources += [
      "desktop_playlists_player.cc",
      "desktop_playlists_player.h",
    ]
  }
}
