source_set("browser") {
  sources = [
    "binance_widget_controller.cc",
    "binance_widget_controller.h",
    "binance_widget_controller_observer.h",
    "binance_widget_service.cc",
    "binance_widget_service.h",
  ]

  deps = [
    "//base",
    "//components/keyed_service/content",
    "//components/keyed_service/core",
    "//content/public/browser",
    "//services/network/public/cpp",
    "//url",
  ]
}

