source_set("browser") {
  sources = [
    "binance_json_parser.cc",
    "binance_json_parser.h",
    "binance_widget_controller.cc",
    "binance_widget_controller.h",
    "binance_widget_service.cc",
    "binance_widget_service.h",
  ]

  deps = [
    "//base",
    "//components/keyed_service/content",
    "//components/keyed_service/core",
    "//content/public/browser",
    "//services/network/public/cpp",
    "//url",
  ]
}

