# Copyright (c) 2020 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/. */

brave_payment_sources = [
  "//brave/components/payments/content/bat_payment_app.cc",
  "//brave/components/payments/content/bat_payment_app.h",
  "//brave/components/payments/content/bat_payment_app_factory.cc",
  "//brave/components/payments/content/bat_payment_app_factory.h",
  "//brave/components/payments/content/brave_payment_app_service.cc",
  "//brave/components/payments/content/brave_payment_app_service.h",
]

