import("//brave/build/config.gni")

source_set("browser") {
  sources = [
    "features.cc",
    "features.h",
    "playlists_constants.cc",
    "playlists_constants.h",
    "playlists_service.cc",
    "playlists_service.h",
    "playlists_service_observer.h",
    "playlists_data_source.cc",
    "playlists_data_source.h",
    "playlists_media_file_controller.cc",
    "playlists_media_file_controller.h",
    "playlists_player.h",
    "playlists_types.cc",
    "playlists_types.h",
  ]

  deps = [
    "//base",
    "//brave/components/playlists/common",
    "//components/keyed_service/core",
    "//components/prefs",
    "//components/user_prefs",
    "//content/public/browser",
    "//services/network/public/cpp",
    "//url",
  ]

  public_deps = [
    "buildflags"
  ]
}
